--- a/stylesheets/stark.css
+++ b/stylesheets/stark.css
@@ -5,6 +5,7 @@ body {
   width: 100%;
   overflow: hidden;
   background-color: #fafafa;
+  padding-bottom: 300px;
 }
 
 .left { float: left }
@@ -117,5 +118,45 @@ a.stark-active {
   text-decoration: none;
   line-height: 1em;
   text-shadow: 0px -1px 1px rgba(0, 0, 0, .8), 0 1px 1px rgba(255, 255, 255, 0.3);
+}
+
+input, textarea, select  {
+  border: 1px solid #ccc;
+  padding: 0.5em;
+  font-size: 1em;
+  line-height: 1.1em;
+  background: white;
+  -webkit-appearance: none;
+  -webkit-box-shadow: inset 0px 1px 5px #cccccc;
+  -webkit-border-radius: 0.5em;
+  text-decoration: none;
+  color: black;
+}
+
+input[type=checkbox], input[type=radio] {
+  display: inline-block;
+  font-size: 1em;
+  line-height: 1em;
+  margin: 0 0.25em 0 0;
+  padding: 0;
+  width: 1.25em;
+  height: 1.25em;
+  -webkit-border-radius: 0.25em;
+  vertical-align: text-top;
+  -webkit-box-shadow: none;
+}
+
+input[type=radio] {
+  -webkit-border-radius: 2em;
+}
+
+input[type=checkbox]:checked {
+  background: url("/images/stark/checkbox_checked.png") no-repeat center center;
+  -webkit-background-size: 1em 1em;
+}
+
+input[type=radio]:checked {
+  background: url("/images/stark/radio_checked.png") no-repeat center center;
+  -webkit-background-size: 1em 1em;
 }
 
